--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       name="description"
       content="UnMarshall Sample UI"
     />
-    <title>React App</title>
+    <title>Unmarshall</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
